--- a/directive scope/pages/main.html
+++ b/directive scope/pages/main.html
@@ -3,6 +3,7 @@
 
 <h3>Search Results</h3>
 <div class="list-group">
-    <search-result person-object="person" formatted-address-function="formattedAddress(aperson)" ng-repeat="person in people">       
+    <search-result person-object="person" formatted-address-function="formattedAddress(aperson)" ng-repeat="person in people">
+        *search results may not be valid
     </search-result>
 </div>
